
[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "panorama_manager"
version = "0.1.0"
description = "A package to manage panorama and RAW file images on the terminal."
readme = "README.md"

[project.scripts]
pano = "libpano.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "D", "I", "N", "NPY201", "S", "T", "UP", "B", "SIM", "R", "RET"]
ignore = ["B019", "S603", "S607", "S101", "D203", "D213"]

fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.ty.environment]
extra-paths = ["/usr/lib/python3.13/site-packages"]
